--- a/.gitignore
+++ b/.gitignore
@@ -1,90 +1,54 @@
-# Xcode
-#
-# gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
+# These are some examples of commonly ignored file patterns.
+# You should customize this list as applicable to your project.
 
-## User settings
-xcuserdata/
+# 3rd Party
+Pods
+.gem
+.scannerwork
+Gemfile.lock
+Podfile.lock
 
-## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
-*.xcscmblueprint
-*.xccheckout
+# Build
+.build
+.build.xcarchive
+.match
+.vscode/
+MobSFScanReports/
+upload_dsym_results
+statistics.yml
+protectionreport.html
+telemetry_dump.json
+culprits.txt
+dSYMs/
+mapping.yml
+Artifacts/
+# .ruby-version
 
-## compatibility with Xcode 3 and earlier (ignoring not required starting Xcode 4)
-build/
-DerivedData/
-*.moved-aside
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
+# Test and Sonar
+sonar-reports/
+# Sonar/sonar-project.properties
 
-## Obj-C/Swift specific
-*.hmap
+# Project
+Pokemon.xcodeproj/xcuserdata
+Pokemon.xcodeproj/project.xcworkspace/xcuserdata
+Pokemon.xcworkspace/xcuserdata
+*.mobileprovision
+*.cer
+*.p12
+*.certSigningRequest
 
-## App packaging
-*.ipa
-*.dSYM.zip
-*.dSYM
+# Misc
+*.DS_Store
+*.log
+.vscode/
 
-## Playgrounds
-timeline.xctimeline
-playground.xcworkspace
-
-# Swift Package Manager
-#
-# Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
-# Packages/
-# Package.pins
-# Package.resolved
-# *.xcodeproj
-#
-# Xcode automatically generates this directory with a .xcworkspacedata file and xcuserdata
-# hence it is not needed unless you have added a package configuration file to your project
-# .swiftpm
-
-.build/
-
-# CocoaPods
-#
-# We recommend against adding the Pods directory to your .gitignore. However
-# you should judge for yourself, the pros and cons are mentioned at:
-# https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
-#
-# Pods/
-#
-# Add this line if you want to avoid checking in source code from the Xcode workspace
-# *.xcworkspace
-
-# Carthage
-#
-# Add this line if you want to avoid checking in source code from Carthage dependencies.
-# Carthage/Checkouts
-
-Carthage/Build/
-
-# Accio dependency management
-Dependencies/
-.accio/
-
-# fastlane
-#
-# It is recommended to not store the screenshots in the git repo.
-# Instead, use fastlane to re-generate the screenshots whenever they are needed.
-# For more information about the recommended setup visit:
-# https://docs.fastlane.tools/best-practices/source-control/#source-control
-
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots/**/*.png
-fastlane/test_output
-
-# Code Injection
-#
-# After new code Injection tools there's a generated folder /iOSInjectionProject
-# https://github.com/johnno1962/injectionforxcode
-
-iOSInjectionProject/
+# CI/CD
+fastlane/.env.default
+fastlane/Firebase/
+fastlane/Keys/
+fastlane/Security/
+fastlane/GoogleService-Info.plist
+fastlane/.env.default
+fastlane/Changelog/
+report.xml
+Preview.html
